Update attribute definitions and workflow